<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">中创软件</string>

    <!-- **************** Network configuration **************** -->
    <string name="app_name">中创软件</string>
    <string name="copyright"><![CDATA[中国外运广东有限公司&copy;]]></string>

    <!-- **************** Title **************** -->


    <!-- **************** Label **************** -->
    <string name="label_login_manual">登陆</string>
    <string name="label_home">流程管理</string>
    <string name="label_user_info">用户信息</string>
    <string name="label_about">关于</string>
    <string name="label_string_holder">预填文字</string>
    <string name="label_loading">加载中...</string>
    <string name="label_submit">提交</string>
    <string name="label_cancel">取消</string>
    <string name="label_agree">同意</string>
    <string name="label_disagree">不同意</string>
    <string name="label_reject">退回</string>
    <string name="label_back">返回</string>
    <string name="label_history">历史</string>
    <string name="label_none">无</string>
    <string name="label_info">信息</string>
    <string name="label_choose">请选择</string>
    <string name="label_username">用户名:</string>
    <string name="label_passwd">密\u0020\u0020\u0020\u0020码:</string>
    <string name="label_login">登陆</string>
    <string name="label_mm_new">新建流程</string>
    <string name="label_mm_todo">待办流程</string>
    <string name="label_mm_ongoing">在办流程</string>
    <string name="label_mm_done">办结流程</string>
    <string name="label_flow_history">流程处理记录</string>
    <string name="label_flow_step">步骤%1$s: </string>
    <string name="label_flow_done">已结束</string>
    <string name="label_flow_new_list">选择流程类型</string>
    <string name="label_flow_leave_detail">详细信息</string>
    <string name="label_flow_leave_request">请假申请</string>
    <string name="label_flow_leave_approve">请假审批</string>
    <string name="label_flow_leave_confirm">请假核销</string>
    <string name="label_flow_leave_confirm_approve">请假核销审批</string>
    <string name="label_secret_menu">Secret Menu</string>
    <string name="label_secret_server">Server列表</string>
    <string name="label_secret_activity_entry">Activity入口</string>
    <string name="label_secret_log_level">修改LOG级别</string>
    <string name="label_secret_sys_env">修改系统环境</string>

    <!-- **************** Normal string **************** -->
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="error">错误</string>
    <string name="loading">加载中...</string>
    <string name="finish">加载完成</string>

    <!-- **************** Message string **************** -->
    <!-- Common message -->
    <string name="msg_exit_confirm">您确定要退出系统？</string>
    <string name="msg_submit_success">操作成功，任务已经提交至：%1$s</string>
    <string name="msg_flow_done">流程已成功结束</string>
    <string name="msg_get_checkcode">获取验证码失败</string>
    <string name="msg_val_phone_number_null">请输入手机号码</string>
    <string name="msg_val_phone_number_error">手机号码格式错误</string>
    <string name="msg_val_username_null">请输入用户名</string>
    <string name="msg_val_username_error">用户名格式错误</string>
    <string name="msg_val_passwd_null">请输入密码</string>
    <string name="msg_val_passwd_error">密码格式错误</string>
    <string name="msg_network_error">服务器访问异常</string>
    <string name="msg_network_timeout">服务器访问超时</string>
    <string name="msg_network_unreachable">网络不可用，请检查网络设置</string>
    <!-- Featured message -->
    <string name="msg_logining">正在登录，请稍后...</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_login_failed">登录失败</string>
    <string name="msg_loading">正在处理，请稍候...</string>
    <string name="msg_reg_success">注册成功，密码将通过短信发给您，请注意查收</string>
    <string name="msg_reg_failed">注册失败</string>
    <string name="msg_get_passwd_success">找回密码成功，密码将通过短信发给您，请注意查收</string>
    <string name="msg_get_passwd_failed">找回密码失败</string>
    <string name="msg_change_passwd_success">修改密码成功</string>
    <string name="msg_favorites_success">收藏成功</string>
    <string name="msg_favorites_failed">收藏失败</string>
    <string name="msg_system_error">系统错误</string>
    <string name="msg_system_handle_error">亮度修改失败</string>
    <string name="msg_keyword_not_null">关键词不能为空</string>
    <string name="msg_flow_miss_instance_id">缺少流程实例ID</string>

    <!-- **************** Business string **************** -->
    <string name="about">
<![CDATA[
	中国外运广东有限公司\u0020版权所有<br/>
	Copyright&copy; 2010-2013<br/>
	All Rights Reserved.
	]]>
    </string>

    <string-array name="leave_types">
        <item>病假</item>
        <item>事假</item>
        <item>婚假</item>
        <item>丧假</item>
        <item>产假</item>
        <item>陪产假</item>
        <item>计划生育假</item>
    </string-array>

    <string name="title_activity_init">InitActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>