<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent"  
    	android:layout_height="@dimen/height_nav"
		>
		
		    <cvicse.client.isen.framework.nav.BgIPhoneTab
     			android:id="@+id/tabNav"
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		/>

        	<ImageView
				android:id="@+id/imgBgSelect"
				android:layout_width="110dip"
				android:layout_height="fill_parent"
				android:background="@drawable/bg_tab"
				android:visibility="visible"
				/>

        	<LinearLayout
        		android:layout_width="fill_parent"
        		android:layout_height="fill_parent"
        		android:gravity="center"
        		android:orientation="horizontal"
        		>
        			<LinearLayout 
		        		android:id="@+id/btnNavHome"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_weight="1"
        				android:orientation="vertical"
        				android:gravity="center"
		        		android:clickable="true"
		        		android:focusable="true"
        				>
			        	<ImageView
			        		android:id="@+id/imgNavHome"
			        		android:layout_width="@dimen/nav_icon"
			        		android:layout_height="@dimen/nav_icon"
			        		android:layout_gravity="center"
			        		android:src="@drawable/selector_nav_home"
			        		/>
			        	<TextView
			        		style="@style/FontSmall.Gray"
			        		android:layout_width="wrap_content"
			        		android:layout_height="wrap_content"
			        		android:layout_gravity="center"
			        		android:layout_marginBottom="@dimen/edge_super_small"
			        		android:text="@string/label_home"
			        		/>
        			</LinearLayout>

        			<LinearLayout 
		        		android:id="@+id/btnNavUserInfo"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_weight="1"
        				android:orientation="vertical"
        				android:gravity="center"
		        		android:clickable="true"
		        		android:focusable="true"
        				>
			        	<ImageView
			        		android:id="@+id/imgNavUserInfo"
			        		android:layout_width="@dimen/nav_icon"
			        		android:layout_height="@dimen/nav_icon"
			        		android:layout_gravity="center"
			        		android:src="@drawable/selector_nav_user_info"
			        		/>
			        	<TextView
			        		style="@style/FontSmall.Gray"
			        		android:layout_width="wrap_content"
			        		android:layout_height="wrap_content"
			        		android:layout_gravity="center"
			        		android:layout_marginBottom="@dimen/edge_super_small"
			        		android:text="@string/label_user_info"
			        		/>
        			</LinearLayout>

        			<LinearLayout 
		        		android:id="@+id/btnNavAbout"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_weight="1"
        				android:orientation="vertical"
        				android:gravity="center"
		        		android:clickable="true"
		        		android:focusable="true"
        				>
			        	<ImageView
			        		android:id="@+id/imgNavAbout"
			        		android:layout_width="@dimen/nav_icon"
			        		android:layout_height="@dimen/nav_icon"
			        		android:layout_gravity="center"
			        		android:src="@drawable/selector_nav_about"
			        		/>
			        	<TextView
			        		style="@style/FontSmall.Gray"
			        		android:layout_width="wrap_content"
			        		android:layout_height="wrap_content"
			        		android:layout_gravity="center"
			        		android:layout_marginBottom="@dimen/edge_super_small"
			        		android:text="@string/label_about"
			        		/>
        			</LinearLayout>

        	</LinearLayout>
        		
	</RelativeLayout>